Khadas boards: add new functionality (kiosk mode, bluetooth)

--- a/recipes/armv7.conf
+++ b/recipes/armv7.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools
+packages=nano psmisc ethtool curl ca-certificates ntp git-core parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks udisks-glue policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools kpartx
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
@@ -55,7 +55,7 @@ components=main non-free
 suite=jessie
 
 [Accessories]
-packages=autossh xbindkeys sg3-utils
+packages=autossh xbindkeys
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
