Refactor build scripts

--- a/recipes/armv8-buster.conf
+++ b/recipes/armv8-buster.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio
 aptsources=Debian
 cleanup=true
 arch=arm64
@@ -10,6 +10,8 @@ retainsources=/build/armv8/root/packages
 allowrecommends=false
 addimportant=false
 omitrequired=false
+aptpreferences=/etc/apt/apt.conf.d/01progress
+omitdebsrc=true
 
 
 [Base]
@@ -56,7 +58,13 @@ components=main non-free
 suite=buster
 
 [Accessories]
-packages=autossh xbindkeys
+packages=autossh xbindkeys lsb-release
+source=http://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
+
+[Volumio]
+packages=mpd shairport-sync zsync
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
