WIP: Modular build script

--- a/recipes/base/armv8-buster.conf
+++ b/recipes/base/armv8-buster.conf
@@ -33,13 +33,13 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks2 policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools
+packages=nano psmisc ethtool curl ca-certificates ntp git parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks2 policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools u-boot-tools
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [FS]
-packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba
+packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba winbind libnss-winbind
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
