Fix legacy node paths

--- a/volumio/lib/systemd/system/logondemand.service
+++ b/volumio/lib/systemd/system/logondemand.service
@@ -3,7 +3,7 @@ Description=Send Log on demand
 
 [Service]
 EnvironmentFile=/tmp/logfields
-ExecStart=/usr/local/bin/node /volumio/logsubmit.js
+ExecStart=/usr/bin/node /volumio/logsubmit.js
 User=volumio
 Group=volumio
 
