Streamline multistrap config

--- a/recipes/base/arm-buster.conf
+++ b/recipes/base/arm-buster.conf
@@ -30,7 +30,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [FS]
-packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba
+packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba udevil winbind libnss-winbind
 source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
