Streamline multistrap packages

--- a/recipes/base/arm-buster.conf
+++ b/recipes/base/arm-buster.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio
+debootstrap=Base Net Utils Assets FS Firmware Accessories DebianBackports Volumio UPnP
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -41,12 +41,6 @@ source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
 
-[Spotify]
-packages=libao-dev libglib2.0-dev libjson-glib-1.0-0 libjson-glib-dev libao-common libasound2-dev libreadline-dev libsox-dev libsoup2.4-dev libsoup2.4-1
-source=https://archive.raspbian.org/raspbian
-keyring=debian-archive-keyring
-suite=buster
-
 [Firmware]
 packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
 source=https://archive.raspbian.org/raspbian
@@ -60,8 +54,20 @@ source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
 
+[DebianBackports]
+packages=shairport-sync
+source=https://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster-backports
+
 [Volumio]
-packages=mpd shairport-sync zsync
+packages=mpd zsync
 source=https://archive.raspbian.org/raspbian
+keyring=debian-archive-keyring
+suite=buster
+
+[UPnP]
+packages=upmpdcli sc2mpd scweb upmpdcli-gmusic upmpdcli-tidal
+source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
 keyring=debian-archive-keyring
 suite=buster
