Fix package conflicts for udev

--- a/recipes/base/arm-buster.conf
+++ b/recipes/base/arm-buster.conf
@@ -55,7 +55,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [DebianBackports]
-packages=shairport-sync
+packages=shairport-sync libudev-dev
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster-backports
