--- a/recipes/base/armv8-buster.conf
+++ b/recipes/base/armv8-buster.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories DebianBackports Volumio UPnP
 aptsources=Debian
 cleanup=true
 arch=arm64
@@ -33,7 +33,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks2 policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools
+packages=nano psmisc ethtool curl ca-certificates ntp git parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks2 policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools strace
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
@@ -63,8 +63,21 @@ source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
-[Volumio]
-packages=mpd shairport-sync zsync
+[DebianBackports]
+packages=shairport-sync libudev-dev
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
+suite=buster-backports
+
+[Volumio]
+packages=mpd zsync
+source=https://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
+
+[UPnP]
+packages=upmpdcli sc2mpd scweb upmpdcli-gmusic upmpdcli-tidal
+source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
+keyring=debian-archive-keyring
+arch=armhf
 suite=buster
