--- a/recipes/base/armv7-buster.conf
+++ b/recipes/base/armv7-buster.conf
@@ -64,7 +64,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [DebianBackports]
-packages=shairport-sync
+packages=shairport-sync libudev-dev
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster-backports
