Remove `upmpdcli` from armv8 builds

--- a/recipes/base/armv8-buster.conf
+++ b/recipes/base/armv8-buster.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories DebianBackports Volumio UPnP
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories DebianBackports Volumio
 aptsources=Debian
 cleanup=true
 arch=arm64
@@ -73,11 +73,4 @@ suite=buster-backports
 packages=mpd zsync
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
-suite=buster
-
-[UPnP]
-packages=upmpdcli sc2mpd scweb upmpdcli-gmusic upmpdcli-tidal
-source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
-keyring=debian-archive-keyring
-arch=armhf
 suite=buster
