Switch xbindkeysrc.service to restart only on-failure

--- a/volumio/lib/systemd/system/xbindkeysrc.service
+++ b/volumio/lib/systemd/system/xbindkeysrc.service
@@ -3,7 +3,7 @@ Description = Xbindrc
 
 [Service]
 ExecStart=/usr/bin/xbindkeys -X :0 -f /etc/xbindkeysrc
-Restart=always
+Restart=on-failure
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=xbindrc
