--- a/volumio/lib/systemd/system/wireless.service
+++ b/volumio/lib/systemd/system/wireless.service
@@ -4,7 +4,7 @@ Before=volumio.service
 
 [Service]
 Type=forking
-ExecStartPre=-/bin/wifistart.sh
+ExecStartPre=/sbin/iw dev wlan0 set power_save off
 ExecStart=/volumio/app/plugins/system_controller/network/wireless.js start
 KillMode=mixed
 
