--- a/recipes/base/arm-buster.conf
+++ b/recipes/base/arm-buster.conf
@@ -1,7 +1,7 @@
 [General]
 noauth=true
 unpack=true
-debootstrap=Base Net Utils Assets FS Firmware Accessories DebianBackports Volumio UPnP
+debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
 aptsources=Debian
 cleanup=true
 arch=armhf
@@ -18,7 +18,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Net]
-packages=netbase ifupdown iproute2 net-tools iptables dhcpcd5 openssh-server wireless-tools iputils-ping libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd ifplugd
+packages=netbase ifupdown iproute2 net-tools iptables dhcpcd5 openssh-server wireless-tools iputils-ping libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq hostapd ifplugd
 source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl4 libmicrohttpd12 libexpat1 libboost-program-options1.67.0 boost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libjsoncpp1 python-requests exiftool libsidplayfp4 libdw1
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl4 libmicrohttpd12 libexpat1 libboost-program-options1.67.0 boost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libjsoncpp1 python-requests exiftool libsidplayfp4 libdw1 libblockdev-crypto2 libblockdev-mdraid2
 source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
@@ -49,16 +49,10 @@ components=main non-free
 suite=buster
 
 [Accessories]
-packages=autossh xbindkeys lsb-release
+packages=autossh xbindkeys lsb-release libcec4
 source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
-
-[DebianBackports]
-packages=shairport-sync libudev-dev
-source=https://deb.debian.org/debian
-keyring=debian-archive-keyring
-suite=buster-backports
 
 [Volumio]
 packages=mpd zsync
