Align default mpd.conf

--- a/volumio/etc/mpd.conf
+++ b/volumio/etc/mpd.conf
@@ -1,24 +1,24 @@
 # Volumio MPD Configuration File
 
 # Files and directories #######################################################
-music_directory         "/var/lib/mpd/music"
-playlist_directory              "/var/lib/mpd/playlists"
-db_file                 "/var/lib/mpd/tag_cache"
-log_file                        "/var/log/mpd.log"
-#pid_file                       "/var/run/mpd/pid"
-#state_file                     "/var/lib/mpd/state"
+music_directory		"/var/lib/mpd/music"
+playlist_directory		"/var/lib/mpd/playlists"
+db_file			"/var/lib/mpd/tag_cache"
+log_file			"/var/log/mpd.log"
+#pid_file			"/var/run/mpd/pid"
+#state_file			"/var/lib/mpd/state"
 #sticker_file                   "/var/lib/mpd/sticker.sql"
 ###############################################################################
 
 # General music daemon options ################################################
-user                            "mpd"
+user				"mpd"
 group                          "audio"
-bind_to_address         "any"
-#port                           "6600"
-#log_level                      "default"
-gapless_mp3_playback                    "no"
-#save_absolute_paths_in_playlists       "no"
-#metadata_to_use        "artist,album,title,track,name,genre,date,composer,performer,disc"
+bind_to_address		"any"
+#port				"6600"
+#log_level			"default"
+gapless_mp3_playback			"no"
+#save_absolute_paths_in_playlists	"no"
+#metadata_to_use	"artist,album,title,track,name,genre,date,composer,performer,disc"
 auto_update    "yes"
 #auto_update_depth "3"
 ###############################################################################
@@ -38,23 +38,42 @@ input {
 
 # Decoder ################################################################
 
+ 
+
+ 
 
 ###############################################################################
 
 # Audio Output ################################################################
-audio_output {
-	type		"alsa"
-	name		"alsa"
-	device		"hw:0,0"
+
+resampler {      
+  		plugin "soxr"
+  		quality "high"
+  		threads "1"
 }
+
+audio_output {
+		type		"alsa"
+		name		"alsa"
+		device		"hw:0,0"
+		dop			"no"
+		
+		
+		
+
+}
+
+
+
+
 
 audio_output {
     type            "fifo"
     enabled         "no"
     name            "multiroom"
-    path            "/tmp/snapfifo" 
+    path            "/tmp/snapfifo"
     format          "44100:16:2"
-} 
+}
 
 #replaygain			"album"
 #replaygain_preamp		"0"
@@ -62,8 +81,8 @@ volume_normalization		"no"
 ###############################################################################
 
 # MPD Internal Buffering ######################################################
-audio_buffer_size               "2048"
-buffer_before_play              "10%"
+audio_buffer_size		"2048"
+buffer_before_play		"10%"
 ###############################################################################
 
 
@@ -79,4 +98,3 @@ max_output_buffer_size		"81920"
 filesystem_charset		"UTF-8"
 id3v1_encoding			"UTF-8"
 ###############################################################################
-
