--- a/recipes/arm.conf
+++ b/recipes/arm.conf
@@ -55,7 +55,7 @@ components=main non-free
 suite=jessie
 
 [Accessories]
-packages=autossh xbindkeys sg3-utils
+packages=autossh sg3-utils triggerhappy
 source=http://archive.volumio.org/raspbian
 keyring=debian-archive-keyring
 suite=jessie
