Triggerhappy instead of xbindkeys for media controls

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -77,7 +77,7 @@ components=main non-free
 suite=buster
 
 [Accessories]
-packages=autossh libcec4 lsb-release xbindkeys
+packages=autossh libcec4 lsb-release triggerhappy
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
