[raspberry] Bump kernel to 5.4.79, fix perms for vcgencmd, symlink vc bins

--- a/recipes/base/arm-buster.conf
+++ b/recipes/base/arm-buster.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl4 libmicrohttpd12 libexpat1 libboost-program-options1.67.0 boost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libjsoncpp1 python-requests exiftool libsidplayfp4 libdw1 libblockdev-crypto2 libblockdev-mdraid2
+packages=libasound2 libasound2-plugins alsa-utils alsa-base sox libsox-dev sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl4 libmicrohttpd12 libexpat1 libboost-program-options1.67.0 boost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libjsoncpp1 python-requests exiftool libsidplayfp4 libdw1 libblockdev-crypto2 libblockdev-mdraid2
 source=https://archive.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=buster
