--- a/recipes/base/armv8.conf
+++ b/recipes/base/armv8.conf
@@ -24,7 +24,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd ifplugd
+packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev netplug iw ethtool wireless-regdb crda dnsmasq hostapd ifplugd
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
@@ -42,7 +42,7 @@ keyring=debian-archive-keyring
 suite=jessie
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev libjsoncpp0 python-requests djmount  exiftool
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd10 libexpat1 libboost-program-options1.55.0 libboost-system1.55.0 libconfig-dev libjsoncpp0 python-requests exiftool
 source=http://ftp.nl.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
