--- a/recipes/base/armv8-buster.conf
+++ b/recipes/base/armv8-buster.conf
@@ -27,7 +27,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Net]
-packages=netbase ifupdown iproute2 net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd ifplugd
+packages=netbase ifupdown iproute2 net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq hostapd ifplugd
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
