--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -25,7 +25,7 @@ suite=jessie
 
 
 [Net]
-packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq isc-dhcp-server hostapd ifplugd
+packages=netbase ifupdown iproute net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl27 libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq hostapd ifplugd
 source=http://httpredir.debian.org/debian
 keyring=debian-archive-keyring
 suite=jessie
