Refactor multistrap config to use a base configuration from which all architectures are built

--- a/recipes/base/x64.conf
+++ b/recipes/base/x64.conf
@@ -3,4 +3,4 @@ include=VolumioBase.conf
 # only pick what we need from VolumioBase
 debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
 
-# Add additional armv8 specific packages (if required)
+# Add additional x64 specific packages (if required)
