--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -8,60 +8,75 @@ allowrecommends=false
 addimportant=false
 omitrequired=false
 omitdebsrc=true
-aptsources=Base
+# Leave this blank, we copy create our own source list later on
+aptsources=
 keyring=debian-archive-keyring
 aptpreferences=/etc/apt/apt.conf.d/01progress
 
 
 #TODO: Prune and organise these packages!
 [Base]
-packages=busybox acl dmsetup
-packages=insserv libbz2-1.0 libcap2 libcap2-bin libdebconfclient0 libdevmapper1.02.1 libgpg-error0 libprocps7 libsemanage-common libsemanage1
-packages=systemd libsystemd0 libudev1
-packages=udev debian-archive-keyring gnupg gpgv libapt-pkg5.0 libreadline7 libstdc++6 libusb-0.1-4 readline-common base-files base-passwd bash debconf debconf-i18n debianutils e2fslibs e2fsprogs gcc-8-base initscripts libacl1 libattr1 libaudit-common libaudit1 libblkid1 libc-bin libc6 libcomerr2 libcryptsetup12 libdb5.3 libgcc1 libgcrypt20 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libselinux1  libsepol1 libslang2 libsmartcols1 libss2 libtinfo5 libustr-1.0-1 libuuid1 lsb-base mawk multiarch-support ncurses-base ncurses-bin procps startpar tzdata util-linux zlib1g apt apt-transport-https sudo xz-utils
+packages=acl apt apt-transport-https base-files base-passwd bash busybox debconf debconf-i18n debian-archive-keyring debianutils dmsetup e2fslibs e2fsprogs gcc-8-base gnupg gpgv initscripts insserv
+packages=lsb-base mawk multiarch-support ncurses-base ncurses-bin procps readline-common startpar sudo systemd tzdata udev util-linux xz-utils zlib1g
+# Libraries
+packages=libacl1 libapt-pkg5.0 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcap2 libcap2-bin libcomerr2 libcryptsetup12 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcc1
+packages=libgcrypt20 libgpg-error0 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps7 libreadline7 libselinux1 libsemanage-common
+packages=libsemanage1 libsepol1 libslang2 libsmartcols1 libss2 libstdc++6 libsystemd0 libtinfo5 libudev1 libusb-0.1-4 libustr-1.0-1 libuuid1
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [BaseDebPlus]
-packages=cpio initramfs-tools klibc-utils libdrm2 libklibc makedev plymouth
+packages=cpio initramfs-tools klibc-utils makedev plymouth
+# Libraries
+packages=libdrm2 libklibc
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Net]
-packages=netbase ifupdown iproute2 net-tools iptables dhcpcd5 openssh-server wireless-tools telnet iputils-ping libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1 rfkill wpasupplicant libavahi-compat-libdnssd-dev iw ethtool wireless-regdb crda dnsmasq hostapd ifplugd
+packages=crda dhcpcd5 dnsmasq ethtool hostapd ifplugd ifupdown iproute2 iptables iputils-ping iw net-tools netbase openssh-server rfkill telnet wireless-regdb wireless-tools wpasupplicant
+# Libraries
+packages=libavahi-compat-libdnssd-dev libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Utils]
-packages=nano psmisc ethtool curl ca-certificates ntp git parted wget avahi-daemon avahi-discover libnss-mdns zsync udisks2 policykit-1 less fake-hwclock usbutils locales localepurge haveged rsync cpufrequtils jq minizip bc md5deep i2c-tools strace
+packages=avahi-daemon avahi-discover bc ca-certificates cpufrequtils curl ethtool fake-hwclock git haveged i2c-tools jq less localepurge locales md5deep minizip nano ntp parted policykit-1
+packages=psmisc rsync strace udisks2 usbutils wget zsync
+# Libraries
+packges=libnss-mdns
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [FS]
-packages= cifs-utils ntfs-3g dosfstools exfat-utils nfs-common exfat-fuse smbclient samba udevil winbind libnss-winbind
+packages=cifs-utils dosfstools exfat-fuse exfat-utils nfs-common ntfs-3g samba smbclient udevil winbind
+# Libraries
+packages=libnss-winbind
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Assets]
-packages=libasound2 libasound2-data libasound2-plugins alsa-utils sox libsox-dev sqlite3 mpd mpc shairport-sync libupnp13 libmpdclient2 libexpat1 libcurl4 libmicrohttpd12 libexpat1 libboost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libjsoncpp1 python-requests libimage-exiftool-perl libsidplayfp4
+packages=alsa-utils python-requests shairport-sync sox sqlite3
+# Libraries
+packages=libasound2 libasound2-data libasound2-plugins libboost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libcurl4 libexpat1 libexpat1 libimage-exiftool-perl libjsoncpp1
+packages=libmicrohttpd12 libmpdclient2 libsidplayfp4 libsox-dev libupnp13
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Firmware]
-packages=firmware-atheros firmware-ralink firmware-realtek firmware-brcm80211 firmware-linux-free
+packages=firmware-atheros firmware-brcm80211 firmware-linux-free firmware-ralink firmware-realtek
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
 suite=buster
 
 [Accessories]
-packages=autossh xbindkeys lsb-release libcec4
+packages=autossh libcec4 lsb-release xbindkeys
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
@@ -73,13 +88,13 @@ keyring=debian-archive-keyring
 suite=buster-backports
 
 [UPnP]
-packages=upmpdcli sc2mpd scweb upmpdcli-gmusic upmpdcli-tidal
+packages=sc2mpd scweb upmpdcli upmpdcli-gmusic upmpdcli-tidal
 source=http://www.lesbonscomptes.com/upmpdcli/downloads/debian/
 keyring=debian-archive-keyring
 suite=buster
 
 [Volumio]
-packages=mpd zsync
+packages=mpc mpd zsync
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
