WIP: Add x86 into modular framework

--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -1,6 +1,12 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
+debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus
 
 # Add additional x86 specific packages (if required)
+
+[BasePlus]
+packages=grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common
+source=https://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
