[x64] Add support for x64 devices

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -44,7 +44,7 @@ suite=buster
 
 [Utils]
 packages=avahi-daemon avahi-discover bc ca-certificates cpufrequtils curl ethtool fake-hwclock git haveged i2c-tools jq less localepurge locales md5deep minizip nano ntp parted policykit-1
-packages=psmisc rsync strace udisks2 usbutils wget zsync
+packages=psmisc rsync strace usbutils wget zsync
 # Libraries
 packges=libnss-mdns
 source=https://deb.debian.org/debian
