--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -6,7 +6,7 @@ debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus
 # Add additional x86 specific packages (if required)
 
 [BasePlus]
-packages=grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common
+packages=gdisk grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
