[x86] Add kiosk to base rootfs, and streamling x64/x86 into one config

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -98,3 +98,9 @@ packages=mpc mpd zsync
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
+
+[Kiosk]
+packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg xserver-xorg-legacy
+source=https://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
