[x86] Tweak kiosk mode, remove hardcoded timeouts, add logging

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -100,7 +100,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Kiosk]
-packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg xserver-xorg-legacy
+packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg
 source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
