[armv7] Point lesbonscomptes's repo to raspbian for armhf binaries

--- a/recipes/base/armv7.conf
+++ b/recipes/base/armv7.conf
@@ -4,3 +4,9 @@ include=VolumioBase.conf
 debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
 
 # Add additional armv7 specific packages (if required)
+# As the lesbonscomptes repo places all arm stuff under "Raspbian" we need to tweak the source again here
+[UPnP]
+packages=sc2mpd scweb upmpdcli upmpdcli-gmusic upmpdcli-tidal
+source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
+keyring=debian-archive-keyring
+suite=buster
