Fix and sync lesbonscomptes repo quirks

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -26,6 +26,7 @@ source=https://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
+# Initramfs stuff
 [BaseDebPlus]
 packages=cpio initramfs-tools klibc-utils makedev plymouth
 # Libraries
@@ -88,8 +89,16 @@ keyring=debian-archive-keyring
 suite=buster-backports
 
 [UPnP]
-packages=sc2mpd scweb upmpdcli upmpdcli-gmusic upmpdcli-tidal
+#packges=sc2mpd # Not in i386/x86 repo for some reason
+packages=upmpdcli upmpdcli-qobuz upmpdcli-tidal
 source=http://www.lesbonscomptes.com/upmpdcli/downloads/debian/
+keyring=debian-archive-keyring
+suite=buster
+
+# As the lesbonscomptes repo places all arm stuff under "Raspbian" so we need to tweak the source again here
+[UPnPArm]
+packages=sc2mpd upmpdcli upmpdcli-qobuz upmpdcli-tidal
+source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
 keyring=debian-archive-keyring
 suite=buster
 
