--- a/recipes/base/armv7.conf
+++ b/recipes/base/armv7.conf
@@ -1,12 +1,6 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio UPnPArm
 
 # Add additional armv7 specific packages (if required)
-# As the lesbonscomptes repo places all arm stuff under "Raspbian" we need to tweak the source again here
-[UPnP]
-packages=sc2mpd scweb upmpdcli upmpdcli-gmusic upmpdcli-tidal
-source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
-keyring=debian-archive-keyring
-suite=buster
