--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -1,7 +1,7 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus Kiosk
+debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus Kiosk UPnP
 
 # Add additional x86 specific packages (if required)
 
