--- a/recipes/base/armv8.conf
+++ b/recipes/base/armv8.conf
@@ -1,6 +1,6 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnP
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio
 
 # Add additional armv8 specific packages (if required)
