Streamline mkinitramfs and volumio-init-updater

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -28,7 +28,7 @@ suite=buster
 
 # Initramfs stuff
 [BaseDebPlus]
-packages=cpio initramfs-tools klibc-utils makedev plymouth
+packages=cpio initramfs-tools klibc-utils makedev pigz plymouth
 # Libraries
 packages=libdrm2 libklibc
 source=https://deb.debian.org/debian
