Add ability to use an apt cacher using a config flag (`APT_CACHE`)

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -22,7 +22,7 @@ packages=lsb-base mawk multiarch-support ncurses-base ncurses-bin procps readlin
 packages=libacl1 libapt-pkg5.0 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcap2 libcap2-bin libcomerr2 libcryptsetup12 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcc1
 packages=libgcrypt20 libgpg-error0 libkmod2 liblzma5 libmount1 libncurses5 libncursesw5 libpam-modules libpam-modules-bin libpam-runtime libpam0g libpcre3 libprocps7 libreadline7 libselinux1 libsemanage-common
 packages=libsemanage1 libsepol1 libslang2 libsmartcols1 libss2 libstdc++6 libsystemd0 libtinfo5 libudev1 libusb-0.1-4 libustr-1.0-1 libuuid1
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
@@ -31,7 +31,7 @@ suite=buster
 packages=cpio initramfs-tools klibc-utils makedev pigz plymouth
 # Libraries
 packages=libdrm2 libklibc
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
@@ -39,7 +39,7 @@ suite=buster
 packages=crda dhcpcd5 dnsmasq ethtool hostapd ifplugd ifupdown iproute2 iptables iputils-ping iw net-tools netbase openssh-server rfkill telnet wireless-regdb wireless-tools wpasupplicant
 # Libraries
 packages=libavahi-compat-libdnssd-dev libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
@@ -48,7 +48,7 @@ packages=avahi-daemon avahi-discover bc ca-certificates cpufrequtils curl ethtoo
 packages=psmisc rsync strace usbutils wget zsync
 # Libraries
 packges=libnss-mdns
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
@@ -56,7 +56,7 @@ suite=buster
 packages=cifs-utils dosfstools exfat-fuse exfat-utils nfs-common ntfs-3g samba smbclient udevil winbind
 # Libraries
 packages=libnss-winbind
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
@@ -65,26 +65,26 @@ packages=alsa-utils python-requests shairport-sync sox sqlite3
 # Libraries
 packages=libasound2 libasound2-data libasound2-plugins libboost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libcurl4 libexpat1 libexpat1 libimage-exiftool-perl libjsoncpp1
 packages=libmicrohttpd12 libmpdclient2 libsidplayfp4 libsox-dev libupnp13
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Firmware]
 packages=firmware-atheros firmware-brcm80211 firmware-linux-free firmware-ralink firmware-realtek
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
 suite=buster
 
 [Accessories]
 packages=autossh libcec4 lsb-release triggerhappy
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [DebianBackports]
 packages=shairport-sync libudev-dev
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster-backports
 
@@ -104,12 +104,12 @@ suite=buster
 
 [Volumio]
 packages=mpc mpd zsync
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Kiosk]
 packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
