--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -7,6 +7,6 @@ debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus Kiosk
 
 [BasePlus]
 packages=gdisk grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common dmidecode inxi lshw
-source=https://deb.debian.org/debian
+source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
