Remove unnecessary packages

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -63,8 +63,8 @@ suite=buster
 [Assets]
 packages=alsa-utils python-requests shairport-sync sox sqlite3
 # Libraries
-packages=libasound2 libasound2-data libasound2-plugins libboost-program-options1.67.0 libboost-system1.67.0 libconfig-dev libcurl4 libexpat1 libexpat1 libimage-exiftool-perl libjsoncpp1
-packages=libmicrohttpd12 libmpdclient2 libsidplayfp4 libsox-dev libupnp13
+packages=libasound2 libasound2-data libasound2-plugins libconfig-dev libcurl4 libexpat1 libexpat1 libjsoncpp1
+packages=libmicrohttpd12 libmpdclient2 libsidplayfp4 libupnp13
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
@@ -90,14 +90,14 @@ suite=buster-backports
 
 [UPnP]
 #packges=sc2mpd # Not in i386/x86 repo for some reason
-packages=upmpdcli upmpdcli-qobuz upmpdcli-tidal
+packages=upmpdcli
 source=http://www.lesbonscomptes.com/upmpdcli/downloads/debian/
 keyring=debian-archive-keyring
 suite=buster
 
 # As the lesbonscomptes repo places all arm stuff under "Raspbian" so we need to tweak the source again here
 [UPnPArm]
-packages=sc2mpd upmpdcli upmpdcli-qobuz upmpdcli-tidal
+packages=upmpdcli
 source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
 keyring=debian-archive-keyring
 suite=buster
