Remove more transitional dummy packags

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -16,7 +16,7 @@ aptpreferences=/etc/apt/apt.conf.d/01progress
 
 #TODO: Prune and organise these packages!
 [Base]
-packages=acl apt apt-transport-https base-files base-passwd bash busybox debconf debconf-i18n debian-archive-keyring debianutils dmsetup e2fslibs e2fsprogs gcc-8-base gnupg gpgv initscripts insserv
+packages=acl apt base-files base-passwd bash busybox debconf debconf-i18n debian-archive-keyring debianutils dmsetup e2fsprogs gcc-8-base gnupg gpgv initscripts insserv
 packages=lsb-base mawk multiarch-support ncurses-base ncurses-bin procps readline-common startpar sudo systemd tzdata udev util-linux xz-utils zlib1g
 # Libraries
 # packages=libacl1 libapt-pkg5.0 libattr1 libaudit-common libaudit1 libblkid1 libbz2-1.0 libc-bin libc6 libcap2 libcap2-bin libcomerr2 libcryptsetup12 libdb5.3 libdebconfclient0 libdevmapper1.02.1 libgcc1
@@ -45,7 +45,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Utils]
-packages=avahi-daemon bc ca-certificates cpufrequtils curl ethtool fake-hwclock git haveged i2c-tools jq less localepurge locales md5deep minizip nano ntp parted policykit-1
+packages=avahi-daemon bc ca-certificates cpufrequtils curl ethtool fake-hwclock git hashdeep haveged i2c-tools jq less localepurge locales minizip nano ntp parted policykit-1
 packages=psmisc rsync strace usbutils wget zsync
 # Libraries
 packges=libnss-mdns
@@ -62,7 +62,9 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Assets]
-packages=alsa-utils python-requests shairport-sync sox sqlite3
+packages=alsa-utils shairport-sync sox sqlite3
+# Is this required?
+# packages=python-requests 
 # Libraries
 packages=libasound2 libasound2-plugins
 # packages=libconfig-dev
@@ -72,7 +74,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Firmware]
-packages=firmware-atheros firmware-brcm80211 firmware-linux-free firmware-ralink firmware-realtek
+packages=firmware-atheros firmware-brcm80211 firmware-linux-free firmware-realtek
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 components=main non-free
@@ -106,7 +108,6 @@ suite=buster
 
 [Volumio]
 packages=mpc mpd 
-# packags=zsync
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
