--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -66,7 +66,7 @@ packages=alsa-utils shairport-sync sox sqlite3
 # Is this required?
 # packages=python-requests 
 # Libraries
-packages=libasound2 libasound2-plugins
+packages=libavformat58 libasound2 libasound2-plugins
 # packages=libconfig-dev
 # packages=libmicrohttpd12 libmpdclient2 libsidplayfp4 libupnp13
 source=http://deb.debian.org/debian
