Fix typo and install libnss-mdns

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -48,7 +48,7 @@ suite=buster
 packages=avahi-daemon bc ca-certificates cpufrequtils curl ethtool fake-hwclock git hashdeep haveged i2c-tools jq less localepurge locales minizip nano ntp parted policykit-1
 packages=psmisc rsync strace usbutils wget zsync
 # Libraries
-packges=libnss-mdns
+packages=libnss-mdns
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
