Hardcode Upmpdcli Version WIP

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -92,20 +92,6 @@ source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster-backports
 
-[UPnP]
-#packges=sc2mpd # Not in i386/x86 repo for some reason
-packages=upmpdcli
-source=http://www.lesbonscomptes.com/upmpdcli/downloads/debian/
-keyring=debian-archive-keyring
-suite=buster
-
-# As the lesbonscomptes repo places all arm stuff under "Raspbian" so we need to tweak the source again here
-[UPnPArm]
-packages=upmpdcli
-source=http://www.lesbonscomptes.com/upmpdcli/downloads/raspbian/
-keyring=debian-archive-keyring
-suite=buster
-
 [Volumio]
 packages=mpc mpd 
 source=http://deb.debian.org/debian
@@ -114,6 +100,12 @@ suite=buster
 
 [Kiosk]
 packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg
+source=http://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
+
+[UpmpdcliDependencies]
+packages=libjsoncpp1 libmicrohttpd12 python3-certifi python3-chardet python3-idna python3-pkg-resources python3-requests python3-six python3-urllib3
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
