--- a/recipes/base/arm.conf
+++ b/recipes/base/arm.conf
@@ -3,7 +3,7 @@
 # to use pi's debian source containing packages built for armhf with ARMv6 ISA(VFP2) instead of Debian's ARMv7 ISA(VFP3) 
 include=arm-raspbian.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio UPnPArm BaseDebPlus
+debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BaseDebPlus UpmpdcliDependencies
 
 # Add additional Raspberry Pi specific packages (if required)
 
