Custom shairport-sync

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -62,7 +62,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [Assets]
-packages=alsa-utils shairport-sync sox sqlite3
+packages=alsa-utils sox sqlite3
 # Is this required?
 # packages=python-requests 
 # Libraries
@@ -87,7 +87,7 @@ keyring=debian-archive-keyring
 suite=buster
 
 [DebianBackports]
-packages=shairport-sync libudev-dev
+packages=libudev-dev
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster-backports
@@ -106,6 +106,12 @@ suite=buster
 
 [UpmpdcliDependencies]
 packages=libjsoncpp1 libmicrohttpd12 python3-certifi python3-chardet python3-idna python3-pkg-resources python3-requests python3-six python3-urllib3
+source=http://deb.debian.org/debian
+keyring=debian-archive-keyring
+suite=buster
+
+[ShairportSyncDependencies]
+packages=libconfig9
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
