[CI] Switch to action-shell@v1

--- a/.github/workflows/shcheck.yml
+++ b/.github/workflows/shcheck.yml
@@ -2,36 +2,31 @@
 
 name: Check and format
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: ["volumioOS"]
   pull_request:
-    branches: [ master ]
+    branches: ["volumioOS"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Required to process list of files changed
 env:
   GITHUB_BEFORE_SHA: ${{ github.event.before }}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   check:
-    # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      # Run our action
-      - name: Checker and formatter 
-        uses: ./.github/actions/
+      # Run Linters
+      - name: Checker and formatter
+        uses: ashthespy/action-shell@v1
         with:
-         only_changed: 'true'
-         exclude: ./.github*
-
-
+          only_changed: "true"
+          shfmt_flags: "-i 2 -d"
