Fix installToDisk: missing dcfldd

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -1,5 +1,5 @@
-## Multistrap configuration for Volumio rootfs 
-# This configuration is used to build our arch sepcific rootfs. 
+## Multistrap configuration for Volumio rootfs
+# This configuration is used to build our arch sepcific rootfs.
 [General]
 noauth=true
 unpack=true
@@ -38,14 +38,14 @@ suite=buster
 [Net]
 packages=crda dhcpcd5 dnsmasq ethtool hostapd ifplugd ifupdown iproute2 iptables iputils-ping iw net-tools netbase openssh-server rfkill telnet wireless-regdb wireless-tools wpasupplicant
 # Libraries
-packages=libavahi-compat-libdnssd-dev 
+packages=libavahi-compat-libdnssd-dev
 # packages=libgnutls-openssl* libnl-3-200 libnl-genl-3-200 libpcsclite1
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
 
 [Utils]
-packages=avahi-daemon bc ca-certificates cpufrequtils curl ethtool fake-hwclock git hashdeep haveged i2c-tools jq less localepurge locales minizip nano ntp parted policykit-1
+packages=avahi-daemon bc ca-certificates cpufrequtils curl dcfldd ethtool fake-hwclock git hashdeep haveged i2c-tools jq less localepurge locales minizip nano ntp parted policykit-1
 packages=psmisc rsync strace usbutils wget zsync
 # Libraries
 packages=libnss-mdns
@@ -64,7 +64,7 @@ suite=buster
 [Assets]
 packages=alsa-utils sox sqlite3
 # Is this required?
-# packages=python-requests 
+# packages=python-requests
 # Libraries
 packages=libavformat58 libasound2 libasound2-plugins
 # packages=libconfig-dev
@@ -93,7 +93,7 @@ keyring=debian-archive-keyring
 suite=buster-backports
 
 [Volumio]
-packages=mpc mpd 
+packages=mpc mpd
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
