Revert "Pull in the latest MPD (#494)"
This reverts commit 6d93941b7d1ee0299aca1132773592e28a083e7a.

--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -1,7 +1,7 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio MPDx86 BasePlus Kiosk UpmpdcliDependencies ShairportSyncDependencies
+debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus Kiosk UpmpdcliDependencies ShairportSyncDependencies
 
 # Add additional x86 specific packages (if required)
 
@@ -10,9 +10,3 @@ packages=gdisk grub-common initramfs-tools pciutils plymouth plymouth-themes sys
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
-
-[MPDx86]
-packages=mpd 
-source=https://deb.kaliko.me/debian-backports/
-keyring=debian-archive-keyring
-suite=buster-backports
