--- a/recipes/base/armv7.conf
+++ b/recipes/base/armv7.conf
@@ -1,6 +1,6 @@
 [General]
 include=VolumioBase.conf 
 # only pick what we need from VolumioBase
-debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio MPD UpmpdcliDependencies ShairportSyncDependencies
+debootstrap=Base BaseDebPlus Net Utils Assets FS Firmware Accessories Volumio UpmpdcliDependencies ShairportSyncDependencies
 
 # Add additional armv7 specific packages (if required)
