--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -93,16 +93,10 @@ keyring=debian-archive-keyring
 suite=buster-backports
 
 [Volumio]
-packages=mpc
+packages=mpc mpd
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
-
-[MPD]
-packages=mpd
-source=https://deb.kaliko.me/raspbian-backports/
-keyring=debian-archive-keyring
-suite=buster-backports
 
 [Kiosk]
 packages=chromium chromium-l10n fonts-arphic-gbsn00lp fonts-arphic-ukai fonts-unfonts-core openbox unclutter xinit xorg
