--- a/recipes/base/x86.conf
+++ b/recipes/base/x86.conf
@@ -1,12 +1,12 @@
 [General]
-include=VolumioBase.conf 
+include=VolumioBase.conf
 # only pick what we need from VolumioBase
 debootstrap=Base Net Utils Assets FS Firmware Accessories Volumio BasePlus Kiosk UpmpdcliDependencies ShairportSyncDependencies
 
 # Add additional x86 specific packages (if required)
 
 [BasePlus]
-packages=gdisk grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common dmidecode inxi lshw
+packages=gdisk grub-common initramfs-tools pciutils plymouth plymouth-themes syslinux syslinux-common acpid dmidecode inxi lshw
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
