Add libavformat58 on base recipes

--- a/recipes/base/VolumioBase.conf
+++ b/recipes/base/VolumioBase.conf
@@ -93,7 +93,7 @@ keyring=debian-archive-keyring
 suite=buster-backports
 
 [Volumio]
-packages=mpc mpd
+packages=mpc mpd libavformat58
 source=http://deb.debian.org/debian
 keyring=debian-archive-keyring
 suite=buster
